--- a/app/html/login/login.html
+++ b/app/html/login/login.html
@@ -20,7 +20,7 @@
          					ng-pattern="/^[a-zA-Z-]+$/">
 	    		</div>
 	    		<div ng-messages="formLogin.login.$error" style="color:maroon">
-					<div ng-messages-include="html/defaultMessage.html"></div>
+<!-- 					<div ng-messages-include="html/defaultMessage.html"></div> -->
 				</div>
 	  		</div>
 	  		<div class="form-group">
