--- a/app/html/login/login.html
+++ b/app/html/login/login.html
@@ -16,11 +16,10 @@
 							ng-model="user"	
 							ng-minlength="3" 
 							ng-maxlength="15"
-         					ng-required="true"
-         					ng-pattern="/^[a-zA-Z-]+$/">
+         					ng-required="true">
 	    		</div>
 	    		<div ng-messages="formLogin.login.$error" style="color:maroon">
-<!-- 					<div ng-messages-include="html/defaultMessage.html"></div> -->
+ 					<div ng-messages-include="html/defaultMessage.html"></div>
 				</div>
 	  		</div>
 	  		<div class="form-group">
@@ -32,6 +31,8 @@
 	      					ng-model="password"	  
 	      					ng-required="true">
 	    		</div>
+	    	
+	    		
 			</div>
 			<div class="form-group">
    				<div class="col-xs-offset-4 col-xs-8">
