--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
 		<script src="/bower_components/underscore/underscore.js"></script>
 		<script src="/bower_components/jquery/dist/jquery.js"></script>
 		<script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+		<script src="/bower_components/angular-messages/angular-messages.js"></script>
 		
 		<script src="/js/bibliApp/bibliApp.js"></script>
 		<script src="/js/bibliApp/Controllers/HomeCtrl.js"></script>
