--- a/app/html/login/login.html
+++ b/app/html/login/login.html
@@ -14,10 +14,12 @@
 							name="login"
 							placeholder="Login"
 							ng-model="user"	
-							ng-minlength="3" 
-							ng-maxlength="15"
+							ng-minlength="3"
+			         		ng-maxlength="15"
          					>
 	    		</div>
+	    		<pre>{{formLogin.login|json}}</pre>
+	    		<pre>{{user|json}}</pre>
 	    		<div ng-messages="formLogin.login.$error" style="color:maroon">
  					<div ng-messages-include="html/defaultMessage.html"></div>
 				</div>
@@ -26,7 +28,7 @@
 	    		<div class="col-xs-8 col-xs-offset-4">
 	      			<input  type="password" 
 	      					class="form-control"
-	      					name="login" 
+	      					name="password" 
 	      					placeholder="Password"
 	      					ng-model="password"	  
 	      					>
