--- a/app/html/header-footer/footer.html
+++ b/app/html/header-footer/footer.html
@@ -1,3 +1,3 @@
-<!-- 		<footer class="panel-footer marge-footer"> -->
-<!-- 			Projet r&eacute;alis&eacute; par Aragon Romain, Bouaoud Medhi, Gaborit Jean-Marie et Themelin Mathieu -->
-<!-- 		</footer> -->
+<footer class="panel-footer marge-footer">
+	Projet r&eacute;alis&eacute; par Aragon Romain, Bouaoud Mehdi, Gaborit Jean-Marie et Themelin Mathieu
+</footer>
