--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,8 @@
 <html ng-app="bibliApp">
 	<head>
 		<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
+		<link rel="stylesheet" href="/css/style.css">
+		<link rel="stylesheet" href="/css/style_headerfooter.css">
 	
 		<script src="/bower_components/angular/angular.js"></script>
 		<script src="/bower_components/angular-route/angular-route.js"></script>
@@ -22,6 +24,8 @@
 		<script src="/js/bibliApp/Controllers/adherent/AdherentCreationCtrl.js"></script>
 		
 		<script src="/js/bibliApp/Controllers/login/LoginCtrl.js"></script>
+		<script src="/js/bibliApp/Controllers/header/HeaderCtrl.js"></script>
+		
 		
 		<script src="/js/bibliApp/Services/media/MediaRechercheService.js"></script>
 		<script src="/js/bibliApp/Services/LoginLogout/Authentification.js"></script>
