--- a/app/html/bibliApp/adherent/adherentVisualisation.html
+++ b/app/html/bibliApp/adherent/adherentVisualisation.html
@@ -49,9 +49,9 @@
 		<table class="table table-hover col-xs-12">
 			<thead class="bg-warning">
 				<tr>
-					<th>Titre</th>
-					<th class="hidden-xs hidden-sm">Auteur</th>
-					<th class="hidden-xs">Type</th>
+					<th ng-click="triMedia('titre')">Titre</th>
+					<th ng-click="triMedia('auteur')" class="hidden-xs hidden-sm">Auteur</th>
+					<th ng-click="triMedia('type')" class="hidden-xs">Type</th>
 				</tr>
 			</thead>
 
