--- a/app/html/bibliApp/media/mediaVisualisation.html
+++ b/app/html/bibliApp/media/mediaVisualisation.html
@@ -48,8 +48,8 @@
 		<table class="table table-hover col-xs-12">
 			<thead class="bg-warning">
 				<tr>
-					<th>Identifiant Emprunteur</th>
-					<th class="hidden-xs">Nom Emprunteur</th>
+					<th ng-click="triAdherent('id')">Identifiant Emprunteur</th>
+					<th ng-click="triAdherent('nom')" class="hidden-xs">Nom Emprunteur</th>
 				</tr>
 			</thead>
 			<tbody class="bg-danger">
