--- a/app/html/bibliApp/adherent/adherentCreation.html
+++ b/app/html/bibliApp/adherent/adherentCreation.html
@@ -4,6 +4,12 @@
 	L'Adh&eacute;rent {{addedNom}} {{addedPrenom}} a &eacute;t&eacute; corr&eacute;ctement cr&eacute;e.
 </div>
 
+<div class="alert alert-danger" role="alert" ng-show="fail">
+	<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	
+	Erreur lors de la cr&eacute;ation de l'adh&eacute;rent.
+</div>
+
 <div class="col-xs-offset-1">
 	<i>* Elements obligatoire.</i><br><br>
 	
