--- a/app/html/bibliApp/media/mediaCreation.html
+++ b/app/html/bibliApp/media/mediaCreation.html
@@ -1,7 +1,13 @@
-<div class="alert alert-success" role="alert" ng-show="add">
+<div class="alert alert-success" role="alert" ng-show="add" id="creation-alert">
 	<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 	
 	La media {{addedTitre}} a &eacute;t&eacute; corr&eacute;ctement cr&eacute;e.
+</div>
+
+<div class="alert alert-danger" role="alert" ng-show="fail" id="creation-alert">
+	<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	
+	La cr&eacute;tion du media a echou&eacute;.
 </div>
 
 <div class="col-lg-offset-4">
