--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,13 @@
 		<script src="/js/bibliApp/Controllers/MainCtrl.js"></script>
 
 		<script src="/js/bibliApp/Services/media/MediaRechercheService.js"></script>
+		<script src="/js/bibliApp/Services/media/MediaCreationService.js"></script>
+		
+		<script src="/js/bibliApp/Services/adherent/AdherentCreationService.js"></script>
+		
 		<script src="/js/bibliApp/Services/LoginLogout/Authentification.js"></script>
+		
+		<script src="/js/functions.js"></script>
 	</head>
 	
 	<body class="container" ng-controller="MainCtrl">
