--- a/app/html/bibliApp/media/home.html
+++ b/app/html/bibliApp/media/home.html
@@ -19,7 +19,7 @@
 			</div>
 			
 			<div class="col-xs-offset-1 col-xs-2">
-				<button type="button" class="btn btn-warning" ng-click="resultMedia()">Recherche</button>
+				<button type="button" class="btn btn-warning" ng-click="resultMedia(1)">Recherche</button>
 			</div>
 		</div>
 	</form>
@@ -27,25 +27,43 @@
 
 <br>
 
-<table class="table table-bordered table-hover" ng-show="showme" >
-	<thead>
-		<tr class="row warning">
-			<th class="col-xs-4" id="titre"><a ng-click="tri()">Titre</a></th>
-			<th class="col-xs-1" id="type">Type</th>
-			<th class="col-xs-3" id="auteur">Auteur</th>
-			<th class="col-xs-2" id="emprunt">Emprunteur</th>
-			<th class="col-xs-2" id="retour">Date retour</th>
-		</tr>
-	</thead>
+<div ng-show="showme">
+	<table class="table table-bordered table-hover">
+		<thead>
+			<tr class="row warning">
+				<th class="col-xs-4" id="titre"><a ng-click="tri()">Titre</a></th>
+				<th class="col-xs-1" id="type">Type</th>
+				<th class="col-xs-3" id="auteur">Auteur</th>
+				<th class="col-xs-2" id="emprunt">Emprunteur</th>
+				<th class="col-xs-2" id="retour">Date retour</th>
+			</tr>
+		</thead>
+		
+		<tbody>
+			<tr class="row" ng-repeat="resultat in resultats">
+				<td>{{resultat.titre}}</td>
+				<td>{{resultat.type}}</td>
+				<td>{{resultat.auteur}}</td>
+				<td>{{resultat.emprunteur.nom}} {{resultat.emprunteur.prenom}}</td>
+				<td>{{resultat.retour}}</td>
+				<td><a ng-click="mediaVisualisation()"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a></td>
+			</tr>			
+		</tbody>	
+	</table>
 	
-	<tbody>
-		<tr class="row" ng-repeat="resultat in resultats">
-			<td>{{resultat.titre}}</td>
-			<td>{{resultat.type}}</td>
-			<td>{{resultat.auteur}}</td>
-			<td>{{resultat.emprunteur.nom}} {{resultat.emprunteur.prenom}}</td>
-			<td>{{resultat.retour}}</td>
-			<td><a ng-click="mediaVisualisation()"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a></td>
-		</tr>			
-	</tbody>	
-</table>
+	<nav aria-label="Page navigation">
+	  <ul class="pagination">
+	    <li>
+	      <a ng-click="" aria-label="Previous">
+	        <span aria-hidden="true">&laquo;</span>
+	      </a>
+	    </li>
+	    <li ng-repeat="i in getNumber(pageMax) track by $index"><a ng-click="resultMedia($index+1)">{{$index+1}}</a></li>
+	    <li>
+	      <a href="#" aria-label="Next">
+	        <span aria-hidden="true">&raquo;</span>
+	      </a>
+	    </li>
+	  </ul>
+	</nav>
+</div>
